Alignment issues resoved for mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ h6 {
   font-size: 35px;
   color: #fa0404;
   line-height: 1;
+  display: inline-block;
 }
 
 #header h2 {
@@ -101,8 +102,8 @@ h6 {
 
 #header h1 img
 {
-  height: 35px;
-  width: 35px;
+  height: 40px;
+  width: 40px;
 }
 
 #header img {
